fixed layout problems

--- a/gym-project/src/components/Pages/Diet/Diet.css
+++ b/gym-project/src/components/Pages/Diet/Diet.css
@@ -3,3 +3,6 @@
   flex-direction: column;
   gap: 10px; /* espaço entre tudo */
 }
+.container-diet h2 {
+  text-align: center;
+}
