--- a/gym-project/src/components/Pages/Home/Home.css
+++ b/gym-project/src/components/Pages/Home/Home.css
@@ -3,3 +3,8 @@ body {
   color: white;
   font-family: sans-serif;
 }
+.container-home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
